egress/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-v1
spec:
  selector:
    matchLabels:
      app: nginx-app-v1
  template:
    metadata:
      labels:
        app: nginx-app-v1
    spec:
      containers:
      - name: nginx-app-v1
        image: hariramprasanth/my-nginx:v1
        ports:
        - containerPort: 80
